# local-delegate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
.sdd/changes/moe-remote-routing-llamaswap-update/: brief.md  handoff.md  plan.md  research.md  results.md  review.md  spec.md  state.json  verification.md
.sdd/changes/moe-remote-routing-llamaswap-update/evidence/: hooks-pilot-20260724.json
.sdd/changes/release-0-10-0/: brief.md  handoff.md  plan.md  research.md  review.md  spec.md  state.json  verification.md
benchmarks/hooks/: pilot-prompts.md
benchmarks/moe/: README.md  cases.json  llama-swap-canary.yaml
docs/: Investigacion-empaquetado-publicacion-MCP.md
docs/plans/: plan-f6-vision.md  plan-f7-groups.md  plan-v0.2-mejoras.md
docs/recipes/: claude-code-hooks.md  claude-code-integration.md  llama-swap-blackwell.md  llama-swap-groups.md  llama-swap-vision.md  ollama.md  remote-backend.md  update_agents.py
docs/recipes/hooks/: hook_common.py  suggest_delegate_prompt.py  suggest_delegate_read.py  suggest_lint_summary.py
docs/wiki/: Architecture.md  Backend-versions.md  Configuration.md  Daemon.md  Home.md  Publishing.md  Remote-backend.md  Savings-and-metrics.md  Troubleshooting.md
examples/: .env.example  claude_desktop_config.example.json
scripts/: extract_dashboard_js.py  macos_mcp_canary.py  run_macos_remote_canary.sh
src/local_delegate/: __init__.py  __main__.py  autostart.py  benchmark.py  cli.py  config.py  daemon.py  doctor.py  llamaswap_config.py  server.py
src/local_delegate/web/: __init__.py  metrics.py  sysinfo.py
tests/: conftest.py  test_autostart.py  test_benchmark.py  test_core.py  test_daemon.py  test_doctor.py  test_hook_recipes.py  test_llamaswap_config.py  test_metrics.py  test_smoke.py  test_vision.py
