[project]
name = "local-llm-delegate-mcp"
version = "0.8.1"
description = "把机械性的文本→文本任务委托给本地 LLM，节省 Claude 订阅配额。"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Yohan González Almaguer" },
    { name = "magic-zagan" },
]
keywords = ["mcp", "llm", "local", "openai-compatible", "claude", "llama-swap", "ollama", "quota", "delegate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Spanish",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "platformdirs>=4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "filelock>=3",
]

[project.optional-dependencies]
# Extra opt-in para los CLIs `check-llamaswap`/`init-llamaswap` (groups de llama-swap).
# Sin este extra el paquete se comporta exactamente igual que hoy: nada lo requiere en
# el flujo normal del MCP.
llamaswap = ["pyyaml>=6"]

[project.scripts]
# Dos alias al mismo entry point: `local-delegate-mcp` hace que `uvx local-delegate-mcp`
# funcione directo (comando == nombre del paquete); `local-delegate` es el alias corto.
local-llm-delegate-mcp = "local_delegate:main"
local-llm-delegate = "local_delegate:main"
local-delegate-mcp = "local_delegate:main"
local-delegate = "local_delegate:main"

[project.urls]
Homepage = "https://github.com/magic-zagan/local-delegate"
Repository = "https://github.com/magic-zagan/local-delegate"
Issues = "https://github.com/magic-zagan/local-delegate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_delegate"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "respx>=0.21",
    "pyyaml>=6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Reglas por defecto (E4/E7/E9, F) + imports ordenados (I).
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
